<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:layout_margin="@dimen/spacing_medium"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small">
            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/user_picture"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/spacing_small">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/text_size_large"
                   />
                <ImageButton
                    android:id="@+id/edit_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/baseline_edit_24"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/edit_info"/>
            </LinearLayout>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/text_size_small"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/user_name_layout"/>


            <ImageView
                android:id="@+id/user_picture"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:src="@mipmap/baseline_tag_faces_24"
                android:contentDescription="@string/user_image"
                />
        </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/spacing_small">
        <TextView
            android:id="@+id/education"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_large"
            android:layout_weight="1"
            />
        <ImageButton
            android:id="@+id/add_education_btn"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@mipmap/baseline_add_24"
            android:contentDescription="@string/add_education"
            android:background="?attr/selectableItemBackground"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/education_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_small">
            <TextView
                android:id="@+id/experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/experience"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:src="@mipmap/baseline_add_24"
                android:contentDescription="@string/add_experience"
                android:background="?attr/selectableItemBackground"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/experience_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/spacing_small">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/projects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_large"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/add_projects_btn"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:src="@mipmap/baseline_add_24"
                android:contentDescription="@string/add_projects"
                android:background="?attr/selectableItemBackground"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/projects_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</ScrollView>
